--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
 	"version": "0.1.0",
 	"private": true,
 	"dependencies": {
+		"antd": "^3.22.2",
+		"mxgraph": "^4.0.4",
+		"mxgraph-js": "^1.0.1",
+		"mxgraph-js-dt": "^1.0.4",
 		"react": "^16.9.0",
 		"react-dom": "^16.9.0",
-		"react-scripts": "3.1.1",
-		"antd": "^3.22.2",
-		"mxgraph-js": "^1.0.1",
-		"mxgraph-js-dt": "^1.0.4"
+		"react-scripts": "3.1.1"
 	},
 	"scripts": {
 		"start": "react-scripts start",
